docs: harden perf-recovery analysis against PMC review (v2)
Address 7 hardening points from PMC review:

Severe (must close before V1.1 P0):
- §3.2: corrected Q12 back-calc to count 2 FFM/RMW (GET+PUT); added
  cache-hit-rate analysis showing 256 K static cap is insufficient for
  high-cardinality queries (Q8/Q9/Q17 with 5 M working sets)
- §3.4 B-2: evict-during-RMW race fix design — InFlightWritebackMap
  + race property test required before ship
- §3.4 B-5: barrier-flush sharding + S3 PUT rate metric *promoted
  from V1.x deferral to V1.1 P0*. Must land before B-1/B-4 expand
  dirty-entry working set, or first production checkpoint blocks
  on BOS PUT rate cap

Medium:
- §4.3 A-1-preflight: 6 h regression test on Q4/Q5/Q7/Q15/Q18/Q23
  before shipping Generational ZGC (irreversible at config level
  without flag)
- §7: prediction table now carries explicit cache-hit-rate column +
  confidence column; reviewers can validate assumptions

Minor:
- §4.3 A-2: AppCDS scope clarified — helps standalone per-job mode
  + new TM startup only; session-cluster users see only first-TM
  bootstrap savings
- §7: effort revised 2-3 days → 5-7 engineer-days + 1-2 weeks
  elapsed (race tests, ZGC preflight, BOS rate-limit calibration,
  review cycles)

Plus §12: milestone — Q3 optimization track from 2026-Q1 can be
retired. Q3 has won at 1.28x; the laggards are now Q1/Q2 (bucket A)
and per-record-RMW (bucket B).

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>